# thinkbox-xmesh-my

./: CMakeLists.txt  CONTRIBUTING.md  NOTICE.txt  README.md  XMesh.map  XMesh.rc  build.py  conanfile.py  resource.h  version_gen.py
scripts/: AEsequenceXMeshTemplate.mel  XMeshCreateUI.mel  XMeshDeadlineUtils.py  XMeshDeleteUI.mel  XMeshLoadDialog.mel  XMeshMaterialUtils.py  XMeshNoticesDialog.py  XMeshUtils.py  createXMeshLoader.py  saveXMeshSequence.py  showXMeshAbout.mel  showXMeshHelp.mel  showXMeshSaver.py
src/: SaveXMeshCommand.cpp  SaveXMeshCommand.hpp  SequenceSaverHelper.cpp  SequenceSaverHelper.hpp  SequenceXMeshGeometryOverride.cpp  SequenceXMeshGeometryOverride.hpp  SequenceXMeshNode.cpp  SequenceXMeshNode.hpp  XMeshLoggingCommand.cpp  XMeshLoggingCommand.hpp  XMeshLogoMesh.cpp  XMeshLogoMesh.hpp  XMeshSaverUISettingsNode.cpp  XMeshSaverUISettingsNode.hpp  dllmain.cpp  material_id_map.cpp  material_id_map.hpp  material_utils.cpp  material_utils.hpp  maya_xmesh_timing.cpp  maya_xmesh_timing.hpp  progress_bar_progress_logger.cpp  progress_bar_progress_logger.hpp  vertices_to_edge_map.cpp  vertices_to_edge_map.hpp
